@@ -54,7 +54,6 @@ BEGIN_MESSAGE_MAP(CImportDlg, CResizableStandAloneDialog)
 	ON_BN_CLICKED(IDC_BROWSE, OnBnClickedBrowse)
 	ON_BN_CLICKED(IDHELP, OnBnClickedHelp)
 	ON_CBN_SELCHANGE(IDC_OLDLOGS, OnCbnSelchangeOldlogs)
-	ON_CBN_CLOSEUP(IDC_OLDLOGS, OnCbnCloseupOldlogs)
 END_MESSAGE_MAP()
 
 BOOL CImportDlg::OnInitDialog()
@@ -225,12 +224,7 @@ void CImportDlg::OnBnClickedHelp()
 
 void CImportDlg::OnCbnSelchangeOldlogs()
 {
-	m_cMessage.SetText(m_OldLogs.GetString());
-}
-
-void CImportDlg::OnCbnCloseupOldlogs()
-{
-	m_cMessage.SetText(m_OldLogs.GetString());
+	m_cMessage.InsertText(m_OldLogs.GetString());
 }
 
 void CImportDlg::OnCancel()
